Updated lab2 files

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,5 +1,5 @@
 ﻿<footer class='bg-light py-3 mt-5'>
   <div class='container text-center small'>
-     2025  Твоє Ім'я. Email: example@mail.com
+     2025 Любомир Email: example@mail.com
   </div>
 </footer>
