--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,6 +10,18 @@
   <body>
     {% include 'nav.html' %}
     <main class='container my-4'>
+        {% with messages = get_flashed_messages(with_categories=true) %}
+    {% if messages %}
+      <div class="container mt-3">
+        {% for category, msg in messages %}
+          <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
+            {{ msg }}
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+          </div>
+        {% endfor %}
+      </div>
+    {% endif %}
+  {% endwith %}
       {% block content %}{% endblock %}
     </main>
     {% include 'footer.html' %}
